layout vw ht fix, text overflow fix in education, logo image fix in experience, aligned skills horizontally, deleted unwanted componenets

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,12 @@ code {
     monospace;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
