--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -56,13 +56,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 1.5rem;
+    padding: 1rem;
     font-family: 'Poppins', sans-serif;
     background-color: #f8fafc;
 }
 
 .edu-front {
-    font-size: 1.8rem;
+    font-size: 1.2rem;
     color: #1e293b;
 }
 
@@ -73,7 +73,7 @@
 }
 
 .edu-back h3 {
-    font-size: 1.25rem;
+    font-size: 1rem;
     margin-bottom: 0.5rem;
 }
 
@@ -99,5 +99,5 @@
     padding: 0 1rem;
 }
 .edu-icon{
-    margin-bottom: 0.1rem;
+    margin-bottom: 0;
 }
